traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/screens.rpy", line 623
    2-
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "renpy/common/00start.rpy", line 201, in script
    python:
  File "renpy/ast.py", line 1187, in execute
    renpy.python.py_exec_bytecode(self.code.bytecode, self.hide, store=self.store)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_exec_bytecode
    exec(bytecode, globals, locals)
    ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/common/00start.rpy", line 202, in <module>
    _init_language()
    ~~~~~~~~~~~~~~^^
  File "renpy/common/00start.rpy", line 83, in _init_language
    renpy.change_language(language, force=True)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/translation/__init__.py", line 835, in change_language
    run_blocks()
    ~~~~~~~~~~^^
  File "renpy/translation/__init__.py", line 790, in run_blocks
    new_change_language(tl, language, changed)
    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/translation/__init__.py", line 740, in new_change_language
    i.apply()
    ~~~~~~~^^
  File "renpy/ast.py", line 2668, in apply
    value = renpy.python.py_eval(expr)
            ~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "renpy/python.py", line 1290, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/screens.rpy", line 623
    2-
SyntaxError: invalid syntax

macOS-15.4-arm64-arm-64bit arm64
Ren'Py 8.4.1.25072401
Axels Fantasy 1.0
Sun Aug 10 00:25:44 2025
